This file documents the revision history for the Monitoring Webinterface Thruk.

0.34    Wed Mar  3 09:40:49 CET 2010
          - send multiple commands from status detail

0.32    Fri Feb 26 09:16:20 CET 2010
          - added summary report
          - bugfixes

0.31    Thu Feb 25 20:24:15 CET 2010
          - fixed zoom for trends
          - made histogram links optional
          - made automatic page refresh is stopable
          - specific backends can be disabled

0.30    Tue Feb 16 23:40:09 CET 2010
          - updated meta data, documentation
          - added binary package scripts

0.27_3  Tue Feb 16 16:11:00 CET 2010
          - fixed sorting with filters

0.27_2  Sun Feb 14 19:20:58 CET 2010
          - updated Exfoliation to 0.5
          - added init.d script

0.27_1  Fri Feb 12 03:59:09 CET 2010
          - per user themes

0.25_1  Sat Feb  6 17:29:12 CET 2010
          - added trends
          - implemented escape_html_tags
          - added show_context_help

0.23_3  Sat Feb  6 00:06:39 CET 2010
          - added paging for hosts / services

0.23_2  Wed Feb  3 13:31:33 CET 2010
          - added paging to extinfo type 7
          - added config switch to disable paging
          - added date picker to commands

0.21_2  Thu Jan 28 19:13:31 CET 2010
          - fixed fonts in menu
          - made date/time format configurable

0.21_1  Sun Jan 24 09:18:54 CET 2010
          - added availability page
          - trends, statusmap, statuswrl are optional and can be hidden

0.20_3  Thu Jan 14 21:29:54 CET 2010
          - increased showlog performance

0.20_3  Sun Jan 10 14:13:14 CET 2010
          - using frames is no configurable
          - documentation is now replaceable
          - corrected valid html
          - fixed order of logfiles

0.20_1  Thu Jan  7 19:55:36 CET 2010
          - changed logging to log4perl

0.20_0  Tue Jan  5 01:25:14 CET 2010
          - renamed project to Thruk
          - added changelog to start page
