@@ -1,6 +1,6 @@
 use strict;
 use warnings;
-use Test::More tests => 127;
+use Test::More tests => 139;
 
 BEGIN {
     use lib('t');
@@ -33,6 +33,14 @@ my $pages = [
     { url => '/thruk/cgi-bin/notifications.cgi?contact=all&type=128',               like => 'Contact Notifications' },
     { url => '/thruk/cgi-bin/notifications.cgi?contact=all&type=256',               like => 'Contact Notifications' },
     { url => '/thruk/cgi-bin/notifications.cgi?contact=all&type=4096',              like => 'Contact Notifications' },
+    {
+      url => '/thruk/cgi-bin/notifications.cgi?start=2010-03-02+00%3A00%3A00&end=2010-03-03+00%3A00%3A00',
+      like => 'All Hosts and Services'
+    },
+    {
+      url => '/thruk/cgi-bin/notifications.cgi?start=2010-03-02+00%3A00%3A00&end=2010-03-03+00%3A00%3A00&oldestfirst=on',
+      like => 'All Hosts and Services'
+    },
 ];
 
 for my $url (@{$pages}) {
