@@ -1,5 +1,7 @@
 [% USE date %]
-[% PROCESS _header.tt %]
+[% PROCESS _header.tt
+  js = "/thruk/javascript/datetimepicker.js"
+%]
 
     <form method='get' action='notifications.cgi'>
     <table border="0" width="100%">
@@ -29,30 +31,25 @@
           </div><br>
           <table border="0" cellspacing="0" cellpadding="0" class='navBox'>
             <tr>
-              <td align="center" valign="middle" class='navBoxItem'>
+              <td align="center" valign="middle" class='navBoxItem' width="75">
                 Previous Day<br>
-                <a href='notifications.cgi?[% link %]&amp;archive=[% archive + 1 %]'><img src='/thruk/themes/[% theme %]/images/left.gif' border="0" alt='Previous Day' title='Previous Day' width="36" height="32"></a>
+                <input type="image" name="archive" value='-1' src='/thruk/themes/[% theme %]/images/left.gif' alt='Previous Day' title='Previous Day'>
               </td>
               <td width="15"></td>
               <td align="center" class='navBoxDate'>
                 <div class='navBoxTitle'>Log File Navigation</div>
-                [% date.format(start, datetime_format_long) %]<br>
-                to<br>
-                [% IF endname %]
-                  [% endname %]
-                [% ELSE %]
-                  [% date.format(end, datetime_format_long) %]<br>
-                [% END %]
+                <input type="text" value="[% date.format(start, '%Y-%m-%d %H:%M:%S') %]" id="start" name="start" size="20" class="date_input"> <a href="javascript:NewCssCal('start','yyyymmdd','arrow',true,24,false)"><img src="/thruk/themes/[% theme %]/images/calendar.png" width="16" height="16" alt="pick date" class="cal_icon"></a>
+                <br>to<br>
+                <input type="text" value="[% date.format(end, '%Y-%m-%d %H:%M:%S') %]" id="end" name="end" size="20" class="date_input"> <a href="javascript:NewCssCal('end','yyyymmdd','arrow',true,24,false)"><img src="/thruk/themes/[% theme %]/images/calendar.png" width="16" height="16" alt="pick date" class="cal_icon"></a>
+                <br>
               </td>
-              <td width="15"></td>
-              [% IF archive >= 1 %]
-              <td align="center" valign="middle" class='navBoxItem'>
+              <td valign="middle">
+                &nbsp;&nbsp;<input type='submit' value='Update'>
+              </td>
+              <td align="center" valign="middle" class='navBoxItem' width="75">
                 Next Day<br>
-                <a href='notifications.cgi?[% link %]&amp;archive=[% archive - 1 %]'><img src='/thruk/themes/[% theme %]/images/right.gif' border="0" alt='Next Day' title='Next Day' width="36" height="32"></a>
+                <input type="image" name="archive" value='+1' src='/thruk/themes/[% theme %]/images/right.gif' alt='Next Day' title='Next Day'>
               </td>
-              [% ELSE %]
-              <td><img src='/thruk/themes/[% theme %]/images/empty.gif' border="0" width="75" height="1" alt="#########"></td>
-              [% END %]
             </tr>
           </table>
         </td>
@@ -96,7 +93,6 @@
                 [% IF contact %]<input type='hidden' name='contact' value='[% contact %]'>[% END %]
                 [% IF service %]<input type='hidden' name='service' value='[% service %]'>[% END %]
                 [% IF host    %]<input type='hidden' name='host' value='[% host %]'>[% END %]
-                [% IF archive %]<input type='hidden' name='archive' value='[% archive %]'>[% END %]
                 <input type='checkbox' name='oldestfirst'[% IF oldestfirst %] checked[% END %]>
               </td>
               <td align="right" class='optBoxItem'>
