@@ -96,24 +96,24 @@
 [% ELSIF l.type == 'PASSIVE HOST CHECK'           %][% SET pic = "passiveonly.gif"   desc = "Passive Host Check" %]
 
 [% ELSIF l.type == 'SERVICE FLAPPING ALERT'       %]
-          [%    IF l.options.search(';STARTED;')  %][% SET pic = "flapping.gif"      desc = "Service started flapping" %]
-          [% ELSIF l.options.search(';STOPPED;')  %][% SET pic = "flapping.gif"      desc = "Service stoppedflapping" %]
-          [% ELSIF l.options.search(';DISABLED;') %][% SET pic = "flapping.gif"      desc = "Service flap detection disabled" %]
+          [%    IF l.message.search(';STARTED;')  %][% SET pic = "flapping.gif"      desc = "Service started flapping" %]
+          [% ELSIF l.message.search(';STOPPED;')  %][% SET pic = "flapping.gif"      desc = "Service stoppedflapping" %]
+          [% ELSIF l.message.search(';DISABLED;') %][% SET pic = "flapping.gif"      desc = "Service flap detection disabled" %]
           [% END %]
 [% ELSIF l.type == 'HOST FLAPPING ALERT'       %]
-          [%    IF l.options.search(';STARTED;')  %][% SET pic = "flapping.gif"      desc = "Host started flapping" %]
-          [% ELSIF l.options.search(';STOPPED;')  %][% SET pic = "flapping.gif"      desc = "Host stoppedflapping" %]
-          [% ELSIF l.options.search(';DISABLED;') %][% SET pic = "flapping.gif"      desc = "Host flap detection disabled" %]
+          [%    IF l.message.search(';STARTED;')  %][% SET pic = "flapping.gif"      desc = "Host started flapping" %]
+          [% ELSIF l.message.search(';STOPPED;')  %][% SET pic = "flapping.gif"      desc = "Host stoppedflapping" %]
+          [% ELSIF l.message.search(';DISABLED;') %][% SET pic = "flapping.gif"      desc = "Host flap detection disabled" %]
           [% END %]
 [% ELSIF l.type == 'SERVICE DOWNTIME ALERT'       %]
-         [%    IF l.options.search(';STARTED;')   %][% SET pic = "downtime.gif"      desc = "Service entered a period of scheduled downtime" %]
-         [% ELSIF l.options.search(';STOPPED;')   %][% SET pic = "downtime.gif"      desc = "Service exited a period of scheduled downtime" %]
-         [% ELSIF l.options.search(';CANCELLED;') %][% SET pic = "downtime.gif"      desc = "Service scheduled downtime has been cancelled" %]
+         [%    IF l.message.search(';STARTED;')   %][% SET pic = "downtime.gif"      desc = "Service entered a period of scheduled downtime" %]
+         [% ELSIF l.message.search(';STOPPED;')   %][% SET pic = "downtime.gif"      desc = "Service exited a period of scheduled downtime" %]
+         [% ELSIF l.message.search(';CANCELLED;') %][% SET pic = "downtime.gif"      desc = "Service scheduled downtime has been cancelled" %]
          [% END %]
 [% ELSIF l.type == 'HOST DOWNTIME ALERT'          %]
-         [%    IF l.options.search(';STARTED;')   %][% SET pic = "downtime.gif"      desc = "Host entered a period of scheduled downtime" %]
-         [% ELSIF l.options.search(';STOPPED;')   %][% SET pic = "downtime.gif"      desc = "Host exited a period of scheduled downtime" %]
-         [% ELSIF l.options.search(';CANCELLED;') %][% SET pic = "downtime.gif"      desc = "Host scheduled downtime has been cancelled" %]
+         [%    IF l.message.search(';STARTED;')   %][% SET pic = "downtime.gif"      desc = "Host entered a period of scheduled downtime" %]
+         [% ELSIF l.message.search(';STOPPED;')   %][% SET pic = "downtime.gif"      desc = "Host exited a period of scheduled downtime" %]
+         [% ELSIF l.message.search(';CANCELLED;') %][% SET pic = "downtime.gif"      desc = "Host scheduled downtime has been cancelled" %]
          [% END %]
 [% ELSIF l.type == 'LOG ROTATION'                 %][% SET pic = "logrotate.png"     desc = "Log Rotation" %]
 [% ELSIF l.type.search('restarting\.\.\.')        %][% SET pic = "restart.gif"       desc = "Program Restart" %]
